--- a/app/src/main/res/layout/fragment_article_list.xml
+++ b/app/src/main/res/layout/fragment_article_list.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.listing.ArticleListFragment"
     >
 
-  <TextView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="Hello"
+  <include
+      android:id="@+id/layout_toolbar"
+      layout="@layout/layout_toolbar"
       />
 
-</FrameLayout>
+  <include
+      android:id="@+id/layout_progress"
+      layout="@layout/layout_progress"
+      />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
