--- a/app/src/main/res/layout/fragment_article_list.xml
+++ b/app/src/main/res/layout/fragment_article_list.xml
@@ -1,19 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.listing.ArticleListFragment"
     >
+  <data>
+    <import type="android.view.View" />
+    <variable
+        name="viewModel"
+        type="com.goyals.smartdubai.view.listing.ArticleListViewModel"
+        />
+  </data>
 
-  <include
-      android:id="@+id/layout_toolbar"
-      layout="@layout/layout_toolbar"
-      />
+  <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      tools:context=".view.listing.ArticleListFragment"
+      >
 
-  <include
-      android:id="@+id/layout_progress"
-      layout="@layout/layout_progress"
-      />
+    <include
+        android:id="@+id/layout_toolbar"
+        layout="@layout/layout_toolbar"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        android:id="@+id/layout_progress"
+        layout="@layout/layout_progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_article"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/dp_56"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_article"
+        />
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
