--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -10,13 +10,13 @@
         />
     <variable
         name="click"
-        type="com.goyals.smartdubai.view.toolbar.ToolBarClick"
+        type="com.goyals.smartdubai.view.utils.ToolBarClick"
         />
   </data>
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
-      android:layout_height="@dimen/height_toolbar"
-      android:background="@color/black"
+      android:layout_height="@dimen/dp_56"
+      android:background="@color/teal_700"
       >
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -24,7 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="@{()->click.onClickBack()}"
-        android:padding="@dimen/dp_16"
+        android:paddingStart="@dimen/dp_16"
+        android:paddingEnd="0dp"
         android:src="@drawable/ic_back_ff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,10 +33,11 @@
         />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_back"
+        android:id="@+id/tv_title"
         style="@style/text_17_black_bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_16"
         android:text="@{title}"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
