--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <dimen name="height_toolbar">56dp</dimen>
+  <dimen name="dp_64">64dp</dimen>
+  <dimen name="dp_56">56dp</dimen>
+  <dimen name="dp_48">48dp</dimen>
   <dimen name="dp_16">16dp</dimen>
+  <dimen name="dp_12">12dp</dimen>
+  <dimen name="dp_8">8dp</dimen>
+  <dimen name="dp_4">4dp</dimen>
 </resources>
