--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,19 @@
     <item name="android:textSize">17sp</item>
     <item name="android:textStyle">bold</item>
   </style>
+
+  <style name="text_14_black">
+    <item name="android:textColor">@color/black</item>
+    <item name="android:textSize">14sp</item>
+  </style>
+
+  <style name="text_12_teal">
+    <item name="android:textColor">@color/teal_700</item>
+    <item name="android:textSize">12sp</item>
+  </style>
+
+  <style name="text_12_black">
+    <item name="android:textColor">@color/black</item>
+    <item name="android:textSize">12sp</item>
+  </style>
 </resources>
