--- a/app/src/main/res/layout/fragment_article_detail.xml
+++ b/app/src/main/res/layout/fragment_article_detail.xml
@@ -1,15 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.detail.ArticleDetailFragment"
     >
-
-  <TextView
+  <data>
+    <import type="android.view.View" />
+    <variable
+        name="click"
+        type="com.goyals.smartdubai.view.detail.ArticleDetailClickListener"
+        />
+    <variable
+        name="item"
+        type="com.goyals.smartdubai.model.schema.Result"
+        />
+  </data>
+  <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:text="Hello"
-      />
+      android:orientation="vertical"
+      >
+    <include
+        android:id="@+id/layout_toolbar"
+        layout="@layout/layout_toolbar"
+        />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          >
 
-</FrameLayout>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_article"
+            mediaUrl="@{item.media.size() &gt; 0 &amp;&amp; item.media.get(0).mediaMetadata.size() &gt; 0 ? item.media.get(0).mediaMetadata.get(2).url : ``}"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_160"
+            android:elevation="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_title"
+            style="@style/text_16_black_bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_16"
+            android:text="@{item.title}"
+            app:layout_constraintTop_toBottomOf="@id/iv_article"
+            />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_article_by"
+            style="@style/text_13_black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dp_16"
+            android:layout_marginTop="@dimen/dp_8"
+            android:text="@{@string/article_by(item.byline, item.timeToShow)}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_title"
+            />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_description"
+            style="@style/text_14_black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dp_16"
+            android:layout_marginTop="@dimen/dp_12"
+            android:text="@{item.description}"
+            app:layout_constraintTop_toBottomOf="@id/tv_article_by"
+            />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_url"
+            style="@style/text_15_teal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dp_16"
+            android:layout_marginTop="@dimen/dp_12"
+            android:onClick="@{()->click.onUrlClick(item.url)}"
+            android:text="@{item.url}"
+            app:layout_constraintTop_toBottomOf="@id/tv_description"
+            />
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+  </LinearLayout>
+</layout>
