--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,12 @@
     <item name="android:textStyle">bold</item>
   </style>
 
+  <style name="text_16_black_bold">
+    <item name="android:textColor">@color/black</item>
+    <item name="android:textSize">16sp</item>
+    <item name="android:textStyle">bold</item>
+  </style>
+
   <style name="text_14_black">
     <item name="android:textColor">@color/black</item>
     <item name="android:textSize">14sp</item>
@@ -16,8 +22,13 @@
     <item name="android:textSize">12sp</item>
   </style>
 
-  <style name="text_12_black">
+  <style name="text_15_teal">
+    <item name="android:textColor">@color/teal_700</item>
+    <item name="android:textSize">15sp</item>
+  </style>
+
+  <style name="text_13_black">
     <item name="android:textColor">@color/black</item>
-    <item name="android:textSize">12sp</item>
+    <item name="android:textSize">13sp</item>
   </style>
 </resources>
