--- a/app/src/main/res/layout/layout_progress.xml
+++ b/app/src/main/res/layout/layout_progress.xml
@@ -5,6 +5,7 @@
     android:clickable="true"
     android:focusable="true"
     android:gravity="center"
+    android:visibility="gone"
     >
   <ProgressBar
       android:layout_width="wrap_content"
